// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Form /> should render correctly 1`] = `
<div>
  <form
    class="form"
  >
    <p>
      Hello World!
    </p>
  </form>
</div>
`;

exports[`<Form /> should render correctly in the invalid state 1`] = `
<div>
  <form
    class="form -invalid"
  >
    <p>
      Hello World!
    </p>
  </form>
</div>
`;
